--- a/about-us.html
+++ b/about-us.html
@@ -559,10 +559,11 @@
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            We take pride in delivering tangible results. Our data-driven 
-            approach and analytics capabilities allow us to track the 
-            performance of our branding efforts, providing you with real-time 
-            insights into the effectiveness of our strategies
+            We take pride in delivering tangible results. Our
+            data-driven approach and analytics capabilities allow us
+            to track the performance of our branding efforts,
+            providing you with real-time insights into the
+            effectiveness of our strategies
           </p>
         </div>
       </div>
@@ -580,68 +581,70 @@
 
     <!-- Sticky contact us -->
     <div
-      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-72px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative flex items-start overflow-hidden">
+      <div
+        class="relative flex items-start overflow-hidden bg-[#00B0FF]"
+      >
         <a href="/about-you.html">
           <div
-          class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
-        >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
           >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
+          <div
+            class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
           >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-        </div>
-        <div
-          class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
-        >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-        </div>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
         </a>
       </div>
     </div>
@@ -667,7 +670,8 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812
+            3456789
           </h4>
         </div>
         <div
