--- a/about-you.html
+++ b/about-you.html
@@ -397,9 +397,11 @@
 
     <!-- Sticky contact us -->
     <div
-      class="w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-72px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative flex items-start overflow-hidden">
+      <div
+        class="relative flex items-start overflow-hidden bg-[#00B0FF]"
+      >
         <div
           class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
         >
@@ -482,7 +484,8 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-          <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812
+            3456789
           </h4>
         </div>
         <div
