--- a/expertise.html
+++ b/expertise.html
@@ -31,11 +31,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
-    <link 
-      rel="stylesheet" 
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
-      crossorigin="anonymous" referrerpolicy="no-referrer" 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <!-- <link
       rel="stylesheet"
@@ -206,12 +207,14 @@
               <p
                 class="font-inter font-normal text-[#CECECE] text-[20px] xl:text-[22px] 2xl:text-[24px] text-left opacity-[0.5]"
               >
-                At our branding agency, we place your unique needs and aspirations 
-                at the forefront of our services. With pride, we offer comprehensive 
-                solutions designed specifically to align with your brand's vision 
-                and objectives. Our dedicated team of experts is committed to 
-                providing you with understanding, ensuring that your brand receives 
-                the utmost care and attention it deserves.
+                At our branding agency, we place your unique needs and
+                aspirations at the forefront of our services. With
+                pride, we offer comprehensive solutions designed
+                specifically to align with your brand's vision and
+                objectives. Our dedicated team of experts is committed
+                to providing you with understanding, ensuring that
+                your brand receives the utmost care and attention it
+                deserves.
               </p>
             </div>
           </div>
@@ -643,68 +646,70 @@
 
     <!-- Sticky contact us -->
     <div
-      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-72px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative flex items-start overflow-hidden">
+      <div
+        class="relative flex items-start overflow-hidden bg-[#00B0FF]"
+      >
         <a href="/about-you.html">
           <div
-          class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
-        >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
           >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
+          <div
+            class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
           >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-        </div>
-        <div
-          class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
-        >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-        </div>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
         </a>
       </div>
     </div>
@@ -730,7 +735,8 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812
+            3456789
           </h4>
         </div>
         <div
