--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
-    <link 
-      rel="stylesheet" 
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
-      crossorigin="anonymous" referrerpolicy="no-referrer" 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <!-- <link
       rel="stylesheet"
@@ -437,12 +438,58 @@
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            We take pride in delivering tangible results. Our data-driven 
-            approach and analytics capabilities allow us to track the 
-            performance of our branding efforts, providing you with real-time 
-            insights into the effectiveness of our strategies
+            We take pride in delivering tangible results. Our
+            data-driven approach and analytics capabilities allow us
+            to track the performance of our branding efforts,
+            providing you with real-time insights into the
+            effectiveness of our strategies
           </p>
         </div>
+      </div>
+    </div>
+
+    <!-- Our Clients -->
+    <div
+      class="our-clients w-full lg:max-w-[1150px] 2xl:max-w-[1366px] mx-auto mb-40 px-5 xl:px-36 2xl:px-0 flex flex-col items-center"
+    >
+      <h1
+        class="font-outfit text-white font-semibold text-3xl xl:text-5xl leading-normal text-center mb-5"
+      >
+        Our Clients
+      </h1>
+      <div
+        class="relative overflow-hidden brand-box w-full px-0 flex flex-wrap justify-center gap-x-5 items-center"
+      >
+        <img
+          src="./src/assets/images/gatau1-removebg-preview.png"
+          alt="client1"
+          class="w-[100px] xl:w-[140px] xl:h-[140px] grayscale hover:grayscale-0 transition duration-300"
+        />
+        <img
+          src="./src/assets/images/gatau2-removebg-preview.png"
+          alt="client2"
+          class="w-[120px] xl:w-[180px] grayscale hover:grayscale-0 transition duration-300"
+        />
+        <img
+          src="./src/assets/images/gatau3-removebg-preview.png"
+          alt="client3"
+          class="w-[120px] xl:w-[180px] grayscale hover:grayscale-0 transition duration-300"
+        />
+        <img
+          src="./src/assets/images/logo-zenius-500x500-1-removebg-preview.png"
+          alt="client4"
+          class="w-[120px] xl:w-[180px] grayscale hover:grayscale-0 transition duration-300"
+        />
+        <img
+          src="./src/assets/images/sekar-tejo-removebg-preview.png"
+          alt="client5"
+          class="w-[120px] xl:w-[150px] grayscale hover:grayscale-0 transition duration-300"
+        />
+        <img
+          src="./src/assets/images/Platinum-Logo.svg"
+          alt="client6"
+          class="w-[120px] xl:w-[180px] grayscale hover:grayscale-0 transition duration-300"
+        />
       </div>
     </div>
 
@@ -517,70 +564,72 @@
 
     <!-- Sticky contact us -->
     <div
-      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-72px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-    <div class="relative flex items-start overflow-hidden">
-      <a href="about-you.html">
-        <div
-        class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
-      >
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-      </div>
       <div
-        class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
+        class="relative flex items-start overflow-hidden bg-[#00B0FF]"
       >
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
-        <p
-          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-        >
-          Contact Us
-        </p>
+        <a href="about-you.html">
+          <div
+            class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
+          >
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
+          <div
+            class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
+          >
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
+        </a>
       </div>
-      </a>
-    </div>
     </div>
 
     <!-- Footer goes here -->
@@ -604,7 +653,8 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812
+            3456789
           </h4>
         </div>
         <div
