Add Career Page

--- a/career.html
+++ b/career.html
@@ -163,6 +163,67 @@
       </nav>
     </div>
 
+    <div>
+      <div
+        class="absolute w-[400px] h-[400px] xl:w-[500px] 2xl:w-[600px] 2xl:h-[600px] xl:h-[500px] bg-blue-600 z-[-1] top-[50%] left-0 sm:left-[25%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[1] animate-pulse"
+      ></div>
+      <div
+        class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[60%] sm:top-[60%] right-[10%] -translate-y-[50%] rounded-full blur-[96px] opacity-[1] animate-pulse2"
+      ></div>
+    </div>
+  
+    <!-- Content -->
+    <section class="w-full min-h-[50vh] md:min-h-[90vh]">
+      <div
+        class="w-full h-[50vh] md:h-[90vh] text-center relative flex flex-col justify-center overflow-x-hidden"
+      >
+        <div
+          class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col px-5 2xl:px-0 text-center"
+        >
+          <h1
+            class="hero-item font-inter font-medium text-white text-[22px] sm:text-[68px] xl:text-[64px] 2xl:text-[82px] leading-[1.2] drop-shadow-lg mb-[-10px] xl:mb-[-50px] mt-[-82px] xl:mt-[-72px]"
+          >
+            Be Our
+          </h1>
+          <h1
+            class="text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-bold whitespace-nowrap hero-item2 text-bg font-outfit text-6xl sm:text-[96px] xl:text-[180px] 2xl:text-[224px] leading-normal"
+          >
+            Troops
+          </h1>
+        </div>
+      </div>
+    </section>
+
+    <div class="w-8/12 mx-auto mt-8 mb-56 text-center max-md:w-11/12">
+      <div
+        class="p-8 bg-[#1C1D20] shadow-lg shadow-[#00B0FF] text-white fill-[#242424] max-md:p-0 max-md:pb-8"
+      >
+        <h1 class="max-md:p-4 max-md:mb-4 mb-12 text-6xl max-md:text-3xl font-bold font-outfit text-transparent bg-clip-text bg-gradient-radial from-[#8CDBFF] via-[#00B0FF] to-[#0027AF]">
+          We are really sorry
+        </h1> <br/>
+        <div class="w-9/12 mx-auto max-md:text-left">
+          <p class="mb-10 text-4xl font-thin text-white font-inter max-md:text-xl">
+            <span class="font-semibold">All positions for our troopers are currently filled, </span> 
+            however we value your interest in joining our team
+            and we assure you that we will keep your
+            application on file for future opportunities.  
+          </p>
+          <p class="text-4xl font-thin text-white font-inter max-md:text-xl">
+            <span class="font-semibold md:hidden">Stay connected with us for updates! </span>
+            <span class="font-semibold max-md:hidden">Stay connected with us for updates! <br></span>
+            <span class="max-md:hidden">
+              Thank you for your understanding! <br>
+              If you have any further questions, feel free to reach us.
+            </span>
+            <span class="md:hidden">
+              Thank you for your understanding!
+              If you have any further questions, feel free to reach us.
+            </span>
+          </p>
+        </div>
+      </div>
+    </div>
+
     <!-- Start a project -->
     <section class="w-full mb-40 text-center">
       <a
@@ -175,68 +236,70 @@
 
     <!-- Sticky contact us -->
     <div
-      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-72px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative flex items-start overflow-hidden">
+      <div
+        class="relative flex items-start overflow-hidden bg-[#00B0FF]"
+      >
         <a href="/about-you.html">
           <div
-          class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
-        >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
           >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
+          <div
+            class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
           >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-        </div>
-        <div
-          class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
-        >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
-          >
-            Contact Us
-          </p>
-        </div>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+            <p
+              class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+            >
+              Contact Us
+            </p>
+          </div>
         </a>
       </div>
     </div>
