--- a/about-us.html
+++ b/about-us.html
@@ -237,12 +237,13 @@
                 data-rellax-mobile-speed="-3"
                 data-rellax-desktop-speed="3"
               >
-                At Gambit Rojo, we believe that a successful brand is
-                like a well-executed chess game -
+              At Gambit Rojo, we are dedicated to 
+              creating successful brands that are 
+              carefully crafted through a combination of
                 <span class="text-[#A7A7A7]"
-                  >a harmonious blend of analysis, positioning, and
-                  creativity.</span
-                >
+                  >thoughtful analysis, strategic positioning, 
+                  and limitless creativity.
+                </span>
               </div>
               <div
                 class="absolute w-[200px] h-[200px] xl:w-[600px] 2xl:w-[600px] 2xl:h-[600px] xl:h-[600px] bg-[#00B0FF] z-[-1] top-[90%] 2xl:top-[100%] right-[0%] -translate-x-[0%] -translate-y-[50%] rounded-full blur-[180px] opacity-[1] xl:opacity-50 2xl:blur-[192px]"
