--- a/career.html
+++ b/career.html
@@ -178,7 +178,7 @@
         class="w-full h-[50vh] md:h-[90vh] text-center relative flex flex-col justify-center overflow-x-hidden"
       >
         <div
-          class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col px-5 2xl:px-0 text-center"
+          class="mb-16 w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col px-5 2xl:px-0 text-center"
         >
           <h1
             class="hero-item font-inter font-medium text-white text-[22px] sm:text-[68px] xl:text-[64px] 2xl:text-[82px] leading-[1.2] drop-shadow-lg mb-[-10px] xl:mb-[-50px] mt-[-82px] xl:mt-[-72px]"
@@ -191,6 +191,22 @@
             Troops
           </h1>
         </div>
+        <div
+            class="w-full mx-auto flex justify-center lg:max-w-[1150px] 2xl:max-w-[900px] px-5 xl:px-0 hero-item"
+          >
+            <div class="w-full xl:w-[75%]">
+              <p
+                class="text-center font-inter font-normal text-[#CECECE] text-[20px] xl:text-[22px] 2xl:text-[24px] opacity-[0.7]"
+              >
+              We're thrilled to learn more about you, 
+              if you're excited about joining our troop, 
+              we'd love to see your resume <br>
+
+              <span class="text-[#00B0FF]">Send us your resume at team@gambitrojo.com</span>
+              
+              </p>
+            </div>
+          </div>
       </div>
     </section>
 
